tests/negative/relative_dir/relative.toit
// Copyright (C) 2021 Toitware ApS. All rights reserved.
// Use of this source code is governed by a Zero-Clause BSD license that can
// be found in the tests/LICENSE file.

import .dir as pre
import .dir2 as pre
import .dir2.foo as toto
import .dir2.foo.bar as toto
import .dir2.not_a_directory.bar as toto
